--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ cytoolz==0.12.3
 datasets==2.18.0
 decorator==5.1.1
 deepmultilingualpunctuation==1.0.1
-demucs==4.1.0a2
+demucs==4.0.1
 dill==0.3.8
 Distance==0.1.3
 docker-pycreds==0.4.0
